TagSearcfhList alignment issue

--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -13,6 +13,11 @@
   display: grid;
   grid-template-rows: 1fr min-content;
 }
+.tagSearchList {
+  grid-row: 3 / -1;
+  padding-top: 0rem;
+  margin: 3rem auto;
+}
 
 .subHeading {
   color: white;
